<?xml version="1.0" encoding="utf-8"?>



<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    
    >
    <!-- android:background="@drawable/background_config" -->
    <com.example.jeff.simon.ButtonGridView
    android:id="@+id/button_grid"
    android:layout_alignParentTop="true"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" />
    
    <TableLayout android:id="@+id/button_table"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:stretchColumns="1,5"
    >

    <TableRow android:layout_gravity="left">

        <View
        android:layout_height="2dip"
            android:layout_width="match_parent" />

    </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
            android:layout_gravity="left"
            android:text="@string/game"
                android:layout_width="wrap_content"
                android:layout_column="0" />

            <TextView
            android:id="@+id/game"
            android:layout_gravity="left"
            android:text="1"
                android:layout_column="1" />

            <TextView
                android:layout_gravity="left"
                android:text="@string/score"
                android:layout_column="3" />

            <TextView
                android:id="@+id/set_score"
                android:layout_gravity="left"
                android:layout_column="4" />

            <TextView
            android:layout_gravity="left"
            android:text="@string/level"
                android:layout_column="7" />

            <TextView
            android:id="@+id/level"
            android:layout_gravity="left"
            android:text="1"
                android:layout_column="8" />
        </TableRow>

        <TableRow android:layout_gravity="center">

        <View
        android:layout_height="2dip"
        />

        <View
        android:layout_height="2dip"
            android:layout_column="2" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
            android:id="@+id/last"
            android:background="@drawable/yellow_control"
                android:layout_column="0" />

            <Button
            android:id="@+id/start"
            android:background="@drawable/red_control"
                android:layout_column="3" />

            <Button
             android:id="@+id/longest"
             android:background="@drawable/yellow_control"
                android:layout_column="7" />
        </TableRow>

        <TableRow android:layout_gravity="center">
        <TextView  android:layout_gravity="center"
        android:text="@string/last"
        />
        <View
        android:layout_height="2dip"
            android:layout_column="2" />
        <TextView  android:layout_gravity="center"
        android:text="@string/start"
            android:layout_column="3" />
        <View
        android:layout_height="2dip"
            android:layout_column="4" />

            <TextView  android:layout_gravity="center"
            android:text="@string/longest"
                android:layout_column="7" />

        </TableRow>

    </TableLayout>

</RelativeLayout>
